--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,107 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* body */
+body {
+  padding: 15px;
+  color: white;
+  font: Belleza;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* footer */
+footer {
+  background-color: #53565a;
+  color: white;
+  margin-top: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+footer p {
+  margin-top: 0.8em !important;
+  margin-left: 1.5em;
+}
+
+/* main */
+.main {
+  background-color: white;
+  color: black;
+  height: 100%;
+  min-height: 100%;
+}
+
+.mainDiv {
+  margin: auto;
+  width: 90%;
+  padding: 5px;
+}
+
+.sidebar {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #53565a;
+  margin-top: 10px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+/* Sidebar */
+.sidebar-list-styling {
+  padding-left: 50px;
+  padding-top: 15px;
+  width: 20%;
+  background-color: #53565a;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.sidebar-list a {
+  color: white;
+  padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sidebar-route {
+  flex: 1;
+  padding: "00px";
+}
+
+/* header */
+.header {
+  margin-top: 0.5em !important;
+  text-align: center;
+  background-color: #53565a;
+  color: white;
+}
+
+.header a {
+  color: white;
+}
+
+.header p {
+  margin-top: 0.8em !important;
+}
+.TextInput {
+  font-size: large;
+  border: 1px solid #eeeeee;
+  padding: 5px;
+  border-radius: 3px;
+  display: block;
+  margin: 5px auto;
+}
+.TextInput:focus {
+  outline: none;
+  border-color: #719ece;
+  box-shadow: 0 0 10px rgb(50, 100, 153);
+}
+.Radio {
+  font-size: small;
+}
+.Button {
+  display: block;
+  margin: 10px auto;
+  padding: 0.5rem;
+  font-size: 1em;
+  background: darkcyan;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  margin: 5px auto;
 }
